internal/dataplane/testdata/golden/ingress-v1-rule-with-tls-and-consumer/in.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: kong
  name: ing-with-tls
  namespace: bar-namespace
  uid: c6ac927c-4f5a-4e88-8b5d-c7b01d0f43af
spec:
  rules:
  - host: example.com
    http:
      paths:
      - backend:
          service:
            name: foo-svc
            port:
              number: 80
        path: /
        pathType: Exact
  tls:
  - hosts:
    - 1.example.com
    - 2.example.com
    secretName: sooper-secret
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubernetes.io/ingress.class: kong
  name: foo-svc
  namespace: bar-namespace
  uid: c6ac927c-4f5a-4e88-8b5d-c7b01d0f43af
spec:
  ports:
    - port: 80
---
apiVersion: configuration.konghq.com/v1
kind: KongConsumer
metadata:
  name: consumer
  namespace: default
  annotations:
    kubernetes.io/ingress.class: kong
username: consumer
credentials:
  - consumer-basic-auth
---
apiVersion: v1
kind: Secret
metadata:
  name: consumer-basic-auth
  namespace: default
  labels:
    konghq.com/credential: basic-auth
data:
  username: "Y29uc3VtZXItMQ=="
  password: "Y29uc3VtZXItMS1wYXNzd29yZA=="
---
apiVersion: v1
kind: Secret
metadata:
  name: sooper-secret
  namespace: bar-namespace
  uid: c6ac927c-4f5a-4e88-8b5d-c7b01d0f43af
type: kubernetes.io/tls
data:
  tls.key: |
    LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUNkUUlCQURBTkJna3Foa2lHOXcwQkFRRUZB
[...]
  tls.crt: |
    LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJvVENDQVFvQ0NRQy9WNU9mVFh1N3hEQU5C
[...]
